--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -1,6 +1,41 @@
+```mermaid
 sequenceDiagram
   participant browser
   participant server
-  
-  browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/notes
+
+  activate browser
+  note left of browser: User types note in input field and submits
+  deactivate browser
+  browser ->> server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
   activate server
+  note right of server: Creation of note
+  server -->> browser: Status code 302, redirect to /exampleapp/notes
+  deactivate server
+
+  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+  activate server
+  server -->> browser: HTML document
+  deactivate server
+
+  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+  activate server
+  server -->> browser: the css file
+  deactivate server
+
+  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+  activate server
+  server -->> browser: the JavaScript file
+  deactivate server
+
+  activate browser
+  note left of browser: Javascript script executed by browser
+  deactivate browser
+
+  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+  activate server
+  server -->> browser: data.json file
+  deactivate server
+
+  activate browser
+  note left of browser: Callback function executed by Javascript file, note list elements created
+  deactivate browser
