--- a/part0/0.6.md
+++ b/part0/0.6.md
@@ -3,30 +3,16 @@ sequenceDiagram
   participant browser
   participant server
 
-  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/spa
-  activate server
-  server -->> browser: HTML document
-  deactivate server
-
-  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-  activate server
-  server -->> browser: the css file
-  deactivate server
-
-  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
-  activate server
-  server -->> browser: the JavaScript file
-  deactivate server
-
   activate browser
-  note left of browser: Javascript script executed by browser
+  note left of browser: User types note in input field and presses submit button
+  note left of browser: onSubmit callback function executed by spa.js
   deactivate browser
 
-  browser ->> server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+  browser ->> server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
   activate server
-  server -->> browser: data.json file
+  server -->> browser: 201 status code, note created on server
   deactivate server
 
   activate browser
-  note left of browser: Callback function executed by Javascript file, note list elements created
+  note left of browser: Note added to local list and list regenerated on page with added note by spa.js
   deactivate browser
